added methods get_order_items_by_order_id and get_order_item_by_id in order_service